# recall-lite

./: .gitignore  AGENT.md  BEST_PRACTICES.md  CONFIG.md  CONTRIBUTING.md  MCP.md  PORTAGE_RUST_AUDIT2026.md  README.md  ROADMAP.md  build.txt  config.schema.json  index.html  package-lock.json  package.json
.agent/rules/: recall-lite.md
.agent/workflows/: recall-lite.md  rememex.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
src/: App.css  App.tsx  Modal.css  Modal.tsx  i18n.tsx  main.tsx  types.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  events.rs  i18n.rs  indexer.rs  lib.rs  main.rs  state.rs  watcher.rs
src-tauri/src/indexer/: chunking.rs  db.rs  embedding.rs  embedding_provider.rs  file_io.rs  git.rs  mod.rs  ocr.rs  search.rs
src-tauri/src/ui/: mod.rs  modal.rs  results_list.rs  search_bar.rs  sidebar.rs  status_bar.rs  style.rs
src/components/: ResultsList.tsx  SearchBar.tsx  Settings.tsx  Sidebar.tsx  StatusBar.tsx  TitleBar.css  TitleBar.tsx
src/components/settings/: GeneralSettings.tsx
src/locales/: en.json  tr.json
